# netlist-parser

./: .gitignore  CMakeLists.txt  README.md
circuits/: filter.sp  inverter.sp
include/: Analyzer.h  NetlistParser.h  Subcircuit.h  component.h  net.h
src/: Component.cpp  main.cpp
